# artifacts/api-server/src/routes/index.ts
@@ -5,6 +5,8 @@ import usersRouter from "./users";
 import friendsRouter from "./friends";
 import conversationsRouter from "./conversations";
 import partiesRouter from "./parties";
+import lfgRouter from "./lfg";
+import achievementsRouter from "./achievements";
 import gamesRouter from "./games";
 import platformsRouter from "./platforms";
 import notificationsRouter from "./notifications";
@@ -18,6 +20,8 @@ router.use(usersRouter);
 router.use(friendsRouter);
 router.use(conversationsRouter);
 router.use(partiesRouter);
+router.use(lfgRouter);
+router.use(achievementsRouter);
 router.use(gamesRouter);
 router.use(platformsRouter);
 router.use(notificationsRouter);
